--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.wavemaker</groupId>
-		<artifactId>wavemaker</artifactId>
+		<artifactId>wavemaker-studio</artifactId>
 		<version>6.6.1.M3</version>
 	</parent>
 	<artifactId>wavemaker-common</artifactId>
