--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 	<parent>
 		<groupId>com.wavemaker</groupId>
 		<artifactId>wavemaker-studio</artifactId>
-		<version>0.0.1</version>
+		<version>7.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>wavemaker-common</artifactId>
-    <version>0.0.1</version>
+    <version>7.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<properties>
 		<main.basedir>${basedir}/../..</main.basedir>
