Introduced JSR 303 validations and handling basic exceptions in the request body and have implemented validations for DeploymentController.
Change-Id: Ibb34a407b9de461cffb65e6387e72002b80ce0e4

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -392,16 +392,30 @@ com.wavemaker.json$CycleFound=Cycle found in object "{0}"; using handler "{1}"
 com.wavemaker.json$UnknownCycleHandler_id=11033
 com.wavemaker.json$UnknownCycleHandler=Unknown cycle handler: "{0}"
 
+com.wavemaker.json$MissingFieldValue_id=11034
+com.wavemaker.json$MissingFieldValue=Missing Field value for the parameter "{0}"
+
+com.wavemaker.json$InvalidFieldValue_id=11035
+com.wavemaker.json$InvalidFieldValue=Invalid Field value for the parameter "{0}",{1}
+
+com.wavemaker.json$InvalidObject_id=11036
+com.wavemaker.json$InvalidObject=Invalid Object "{0}",{1}
+
+com.wavemaker.json$UnrecognizedField_id=11037
+com.wavemaker.json$UnrecognizedField=Unrecognized field "{0}"
+
+com.wavemaker.json$InvalidJsonObject_id=11038
+com.wavemaker.json$InvalidJsonObject=Incorrect Json Object
+
+com.wavemaker.json$MessageNotReadable_id=11039
+com.wavemaker.json$MessageNotReadable=Message not readable
+
+com.wavemaker.json$UnexpectedError_id=11040
+com.wavemaker.json$UnexpectedError=Unexpected error,please check server logs for more information
+
 # com.wavemaker.tools.deployment (12000-12999)
-com.wavemaker.tools.deployment$ActionIsRequired_id=12000
-com.wavemaker.tools.deployment$ActionIsRequired=Action is required to this job
-
-com.wavemaker.tools.deployment$InvalidAction_id=12001
+com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
-
-
-
-
 
 
 
