Rest Services : Test cases was failing due to message resources.Fixed it.
Change-Id: I16aa447d8daa7dba193864b18dfa76bffa884463

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -217,6 +217,15 @@ com.wavemaker.tools$ProjectTooOldForUpgrade=Can''t open project "{0}" because it
 com.wavemaker.tools.project$TooManyServiceWires_id=5015
 com.wavemaker.tools.project$TooManyServiceWires=Too many serviceWire beans in service "{0}": {1}
 
+com.wavemaker.tools$ValueCouldNotBeNULL_id=5016
+com.wavemaker.tools$ValueCouldNotBeNULL=Value of the argument "{0}" could not be NULL
+
+com.wavemaker.tools$IllegalArgumentValue_id=5017
+com.wavemaker.tools$IllegalArgumentValue=Value of the argument: "{0}" is illegal : "{1}"
+
+com.wavemaker.tools$FailedToUndeployProject_id=5018
+com.wavemaker.tools$FailedToUndeployProject=Failed to undeploy project "{0}"
+
 
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
@@ -382,6 +391,13 @@ com.wavemaker.json$CycleFound=Cycle found in object "{0}"; using handler "{1}"
 
 com.wavemaker.json$UnknownCycleHandler_id=11033
 com.wavemaker.json$UnknownCycleHandler=Unknown cycle handler: "{0}"
+
+# com.wavemaker.tools.deployment (12000-12999)
+com.wavemaker.tools.deployment$ActionIsRequired_id=12000
+com.wavemaker.tools.deployment$ActionIsRequired=Action is required to this job
+
+com.wavemaker.tools.deployment$InvalidAction_id=12001
+com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
 
 
 
