Rest Services :  Fixed File Locking issue and added message resources.                           Modified Exception message resource if service exist.
Change-Id: If2451a493c77e832f857702633887854f1a5fbb9

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -249,6 +249,9 @@ com.wavemaker.tools.service$UnknownTypeOfType=Unknown type of object "{0}" ({1})
 com.wavemaker.tools$InvalidClassName_id=6006
 com.wavemaker.tools$InvalidClassName=The class or package name "{0}" is invalid: {1}.  Please use a different name
 
+com.wavemaker.tools$ServiceAlreadyExist_id=6007
+com.wavemaker.tools$ServiceAlreadyExist=Service already exist with the service Id "{0}" in project "{1}"
+
 # com.wavemaker.runtime misc (7000-7999)
 com.wavemaker.common.util$FileUtils_PathDNE_id=7000
 com.wavemaker.common.util$FileUtils_PathDNE=path "{0}" does not exist
