Rest Services :  Introducing new message resource if sample database already exist.
Change-Id: I72bfa36becba68f723bf81fc58f83ffe08c5fd74

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -252,6 +252,9 @@ com.wavemaker.tools$InvalidClassName=The class or package name "{0}" is invalid:
 com.wavemaker.tools$ServiceAlreadyExist_id=6007
 com.wavemaker.tools$ServiceAlreadyExist=Service already exist with the service Id "{0}" in project "{1}"
 
+com.wavemaker.tools$SampleDataBaseAlreadyExist_id=6008
+com.wavemaker.tools$SampleDataBaseAlreadyExist=Sample Database already exist in the project "{0}"
+
 # com.wavemaker.runtime misc (7000-7999)
 com.wavemaker.common.util$FileUtils_PathDNE_id=7000
 com.wavemaker.common.util$FileUtils_PathDNE=path "{0}" does not exist
