--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -226,6 +226,9 @@ com.wavemaker.tools$IllegalArgumentValue=Value of the argument: "{0}" is illegal
 com.wavemaker.tools$FailedToUndeployProject_id=5018
 com.wavemaker.tools$FailedToUndeployProject=Failed to undeploy project "{0}"
 
+com.wavemaker.tools$InvalidSchema_id=5019
+com.wavemaker.tools$InvalidSchema=Not a valid schema
+
 
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
