Implemented prefix related rest services and updated read web file with mime type correlation
Change-Id: I56c94fc338a8e4f49e831cbe126086db212cc784

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -422,6 +422,15 @@ com.wavemaker.json$MessageNotReadable=Message not readable
 com.wavemaker.json$UnexpectedError_id=11040
 com.wavemaker.json$UnexpectedError=Unexpected error,please check server logs for more information
 
+com.wavemaker.json$onlyZipFilesAllowedForPrefabs_id=11041
+com.wavemaker.json$onlyZipFilesAllowedForPrefabs=Only .zip files are accepted as prefabs
+
+com.wavemaker.json$alreadyPrefabExists_id=11042
+com.wavemaker.json$alreadyPrefabExists=Already a prefab exists with name '{0}'
+
+com.wavemaker.json$prefabdoesNotExist_id=11043
+com.wavemaker.json$prefabdoesNotExist=Prefab '{0}' does not exist in the studio
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
