Rest Services : Introducing List web resources rest service and added test cases for the same.
Change-Id: Ibfbb2059440c924e9ebf85f184d562239e2cce8f

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -229,6 +229,9 @@ com.wavemaker.tools$FailedToUndeployProject=Failed to undeploy project "{0}"
 com.wavemaker.tools$InvalidSchema_id=5019
 com.wavemaker.tools$InvalidSchema=Not a valid schema
 
+com.wavemaker.tools$FileOrDirectoryNotExist_id=5020
+com.wavemaker.tools$FileOrDirectoryNotExist=File or Directory does not exist with the path "{0}"
+
 
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
