DB and User:Integrated hsql db,implamented basic dao implementations  and Implemented User Registration flow
Change-Id: Ied79eb69ae66d756259ab61405296e586b640182

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -434,6 +434,27 @@ com.wavemaker.json$alreadyPrefabExists=Already a prefab exists with name '{0}'
 com.wavemaker.json$prefabdoesNotExist_id=11043
 com.wavemaker.json$prefabdoesNotExist=Prefab '{0}' does not exist in the studio
 
+com.wavemaker.usernameAlreadyExists_id=11044
+com.wavemaker.usernameAlreadyExists=There is already an account registered with the given username: "{0}"
+
+com.wavemaker.emailAlreadyExists_id=11045
+com.wavemaker.emailAlreadyExists="There is already an account registered with the given email: "{0}"
+
+com.wavemaker.invalidToken_id=11046
+com.wavemaker.invalidToken="Invalid Token: "{0}"
+
+com.wavemaker.userAlreadyConfirmed_id=11047
+com.wavemaker.userAlreadyConfirmed=User "{0}" is already confirmed.
+
+com.wavemaker.noUserWithUsername_id=11048
+com.wavemaker.noUserWithUsername=No user exists with the name "{0}"
+
+com.wavemaker.noUserWithEmail_id=11049
+com.wavemaker.noUserWithEmail=No user exists with the email "{0}"
+
+com.wavemaker.resourceDNEWithId_id=11050
+com.wavemaker.resourceDNEWithId=Resource {0} does not exist with id {1}
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
