Rest Services : Introducing some rest services for deployment.
Change-Id: Ic50fd059562ec00a65080387fcdb5431c26fc316

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -459,6 +459,12 @@ com.wavemaker.resourceDNEWithId=Resource {0} does not exist with id {1}
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
 
+com.wavemaker.deploymentIdCouldNotBeNull_id=12001
+com.wavemaker.deploymentIdCouldNotBeNull= Deployment Id could not be null or empty
+
+com.wavemaker.deploymentIdDoesNotExist_id=12002
+com.wavemaker.deploymentIdDoesNotExist= Deployment Info with Deployment Id "{0}" does not exist
+
 
 
 
