Rest Services : Implemented Import,Export,Download services for project with test cases.
Change-Id: I4497be6e1dfe7c99c51e7f9943b1e4bfa72d9cb8

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -232,6 +232,14 @@ com.wavemaker.tools$InvalidSchema=Not a valid schema
 com.wavemaker.tools$FileOrDirectoryNotExist_id=5020
 com.wavemaker.tools$FileOrDirectoryNotExist=File or Directory does not exist with the path "{0}"
 
+com.wavemaker.tools$Unable_To_Parse_XML_id=5021
+com.wavemaker.tools$Unable_To_Parse_XML=Unable to parse XML
+
+com.wavemaker.tools$FileTypeNotSupported_id=5022
+com.wavemaker.tools$FileTypeNotSupported=File of this "{0}" type is not supported
+
+com.wavemaker.tools$PackageTypeNotSupported_id=5023
+com.wavemaker.tools$PackageTypeNotSupported=Package of this "{0}" type is not supported
 
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
@@ -460,10 +468,14 @@ com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
 
 com.wavemaker.deploymentIdCouldNotBeNull_id=12001
-com.wavemaker.deploymentIdCouldNotBeNull= Deployment Id could not be null or empty
+com.wavemaker.deployment$IdCouldNotBeNull= Deployment Id could not be null or empty
 
 com.wavemaker.deploymentIdDoesNotExist_id=12002
-com.wavemaker.deploymentIdDoesNotExist= Deployment Info with Deployment Id "{0}" does not exist
+com.wavemaker.deployment$IdDoesNotExist= Deployment Info with Deployment Id "{0}" does not exist
+
+com.wavemaker.deployment$DeploymentInfoCouldNotBeEmptyOrNull_id=12003
+com.wavemaker.deployment$DeploymentInfoCouldNotBeEmptyOrNull= Deployment Info Could not be Null or Empty
+
 
 
 
