Rest Services : Implemented Template related services and wrote test cases for the same.
Change-Id: I6cf64202ddc46bb3302812994a65badf241b763f

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -241,6 +241,24 @@ com.wavemaker.tools$FileTypeNotSupported=File of this "{0}" type is not supporte
 com.wavemaker.tools$PackageTypeNotSupported_id=5023
 com.wavemaker.tools$PackageTypeNotSupported=Package of this "{0}" type is not supported
 
+com.wavemaker.tools$TemplateDoesNotExist_id=5024
+com.wavemaker.tools$TemplateDoesNotExist=Template with name "{0}" does not exist
+
+com.wavemaker.tools$TemplateAlreadyExist_id=5025
+com.wavemaker.tools$TemplateAlreadyExist=Template already exist with name "{0}"
+
+com.wavemaker.tools$SaveAsNotPossible_id=5026
+com.wavemaker.tools$SaveAsNotPossible=Save as not possible from "{0}" to "{1}"
+
+com.wavemaker.tools$FailedToDeleteTemplate_id=5027
+com.wavemaker.tools$FailedToDeleteTemplate=Failed to delete template "{0}"
+
+com.wavemaker.tools$InvalidTemplate_id=5028
+com.wavemaker.tools$InvalidTemplate=Given file is not a valid template "{0}"
+
+com.wavemaker.tools$InvalidProject_id=5029
+com.wavemaker.tools$InvalidProject=Given file is not a valid project "{0}"
+
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
 com.wavemaker.tools$InvalidServiceId=The service name "{0}" is invalid: {1}.  Please use a different service name
