--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -259,6 +259,9 @@ com.wavemaker.tools$InvalidTemplate=Given file is not a valid template "{0}"
 com.wavemaker.tools$InvalidProject_id=5029
 com.wavemaker.tools$InvalidProject=Given file is not a valid project "{0}"
 
+com.wavemaker.tools$ProjectAlreadyExist_id=5030
+com.wavemaker.tools$ProjectAlreadyExist=Project already exist with this name "{0}"
+
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
 com.wavemaker.tools$InvalidServiceId=The service name "{0}" is invalid: {1}.  Please use a different service name
