Security: Introduced security to studio
Change-Id: I53f57e01ed001c980cd0b3061ce5ee53628ea659

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -484,6 +484,21 @@ com.wavemaker.noUserWithEmail=No user exists with the email "{0}"
 com.wavemaker.resourceDNEWithId_id=11050
 com.wavemaker.resourceDNEWithId=Resource {0} does not exist with id {1}
 
+com.wavemaker.invalidCredentials_id=11051
+com.wavemaker.invalidCredentials=Invalid credentials
+
+com.wavemaker.failedToAuthenticate_id=11052
+com.wavemaker.failedToAuthenticate=Failed to authenticate
+
+com.wavemaker.accessDenied_id=11053
+com.wavemaker.accessDenied=Access Denied
+
+com.wavemaker.unAuthorized_id=11054
+com.wavemaker.unAuthorized=User not authenticated
+
+com.wavemaker.userAlreadyLoggedOut_id=11055
+com.wavemaker.userAlreadyLoggedOut=User already Logged out
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
