fixes for the tests and cleanup
Change-Id: If13eb3b38b40f1250f112ff26642bc041a584d94

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -262,6 +262,10 @@ com.wavemaker.tools$InvalidProject=Given file is not a valid project "{0}"
 com.wavemaker.tools$ProjectAlreadyExist_id=5030
 com.wavemaker.tools$ProjectAlreadyExist=Project already exist with this name "{0}"
 
+com.wavemaker.tools$FileDoesNotExist_id=5031
+com.wavemaker.tools$FileDoesNotExist=File or Directory does not exist with the name "{0}"
+
+
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
 com.wavemaker.tools$InvalidServiceId=The service name "{0}" is invalid: {1}.  Please use a different service name
