Corrected error details while relating entities in data controller.
Change-Id: I7d8a16ed94bc7277dd14265865eec5299a797ef4

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -294,6 +294,10 @@ com.wavemaker.tools$ServiceAlreadyExist=Service already exist with the service I
 com.wavemaker.tools$SampleDataBaseAlreadyExist_id=6008
 com.wavemaker.tools$SampleDataBaseAlreadyExist=Sample Database already exist in the project "{0}"
 
+com.wavemaker.tools$UnableToFindForeignKeyColumn_id=6009
+com.wavemaker.tools$UnableToFindForeignKeyColumn=Unable to find foreign key column "{0}"
+
+
 # com.wavemaker.runtime misc (7000-7999)
 com.wavemaker.common.util$FileUtils_PathDNE_id=7000
 com.wavemaker.common.util$FileUtils_PathDNE=path "{0}" does not exist
