Rest Service : Implemented Export prefab service and added test cases for the same.
Change-Id: Ia6d645fb692945c07bc16851513b6ea649c22b4c

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -238,32 +238,35 @@ com.wavemaker.tools$Unable_To_Parse_XML=Unable to parse XML
 com.wavemaker.tools$FileTypeNotSupported_id=5022
 com.wavemaker.tools$FileTypeNotSupported=File of this "{0}" type is not supported
 
-com.wavemaker.tools$PackageTypeNotSupported_id=5023
-com.wavemaker.tools$PackageTypeNotSupported=Package of this "{0}" type is not supported
-
-com.wavemaker.tools$TemplateDoesNotExist_id=5024
+com.wavemaker.tools$TemplateDoesNotExist_id=5023
 com.wavemaker.tools$TemplateDoesNotExist=Template with name "{0}" does not exist
 
-com.wavemaker.tools$TemplateAlreadyExist_id=5025
+com.wavemaker.tools$TemplateAlreadyExist_id=5024
 com.wavemaker.tools$TemplateAlreadyExist=Template already exist with name "{0}"
 
-com.wavemaker.tools$SaveAsNotPossible_id=5026
+com.wavemaker.tools$SaveAsNotPossible_id=5025
 com.wavemaker.tools$SaveAsNotPossible=Save as not possible from "{0}" to "{1}"
 
-com.wavemaker.tools$FailedToDeleteTemplate_id=5027
+com.wavemaker.tools$FailedToDeleteTemplate_id=5026
 com.wavemaker.tools$FailedToDeleteTemplate=Failed to delete template "{0}"
 
-com.wavemaker.tools$InvalidTemplate_id=5028
+com.wavemaker.tools$InvalidTemplate_id=5027
 com.wavemaker.tools$InvalidTemplate=Given file is not a valid template "{0}"
 
-com.wavemaker.tools$InvalidProject_id=5029
+com.wavemaker.tools$InvalidProject_id=5028
 com.wavemaker.tools$InvalidProject=Given file is not a valid project "{0}"
 
-com.wavemaker.tools$ProjectAlreadyExist_id=5030
+com.wavemaker.tools$ProjectAlreadyExist_id=5029
 com.wavemaker.tools$ProjectAlreadyExist=Project already exist with this name "{0}"
+
+com.wavemaker.tools$PackageOfThisFileTypeNotSupported_id=5030
+com.wavemaker.tools$PackageOfThisFileTypeNotSupported="{0}" of this "{1}" file type is not supported
 
 com.wavemaker.tools$FileDoesNotExist_id=5031
 com.wavemaker.tools$FileDoesNotExist=File or Directory does not exist with the name "{0}"
+
+com.wavemaker.tools$InsufficientResourcesToCreateJarFile_id=5032
+com.wavemaker.tools$InsufficientResourcesToCreateJarFile=Insufficient resources to create jar file
 
 
 # com.wavemaker.tools.service (6000-6999)
