Added cloudjee username,password integration into user
Change-Id: Ic5ef55528006664bb612832a31513b613712c825

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -510,6 +510,9 @@ com.wavemaker.unAuthorized=User not authenticated
 com.wavemaker.userAlreadyLoggedOut_id=11055
 com.wavemaker.userAlreadyLoggedOut=User already Logged out
 
+com.wavemaker.emptyCloudJeeAccountDetails_id=11056
+com.wavemaker.emptyCloudJeeAccountDetails=User CloudJee account details has an empty username or password
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
