--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -502,16 +502,22 @@ com.wavemaker.failedToAuthenticate_id=11052
 com.wavemaker.failedToAuthenticate=Failed to authenticate
 
 com.wavemaker.accessDenied_id=11053
-com.wavemaker.accessDenied=Access Denied
+com.wavemaker.accessDenied=Access denied
 
 com.wavemaker.unAuthorized_id=11054
 com.wavemaker.unAuthorized=User not authenticated
 
 com.wavemaker.userAlreadyLoggedOut_id=11055
-com.wavemaker.userAlreadyLoggedOut=User already Logged out
+com.wavemaker.userAlreadyLoggedOut=User already logged out
 
 com.wavemaker.emptyCloudJeeAccountDetails_id=11056
 com.wavemaker.emptyCloudJeeAccountDetails=User CloudJee account details has an empty username or password
+
+com.wavemaker.oldPasswordDoesNotMatch_id=11057
+com.wavemaker.oldPasswordDoesNotMatch=Old password does not match
+
+com.wavemaker.newPasswordSameAsOldPassword_id=11058
+com.wavemaker.newPasswordSameAsOldPassword=New password is same as old one
 
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
