Fixed generate services through WSDL file and introduced test cases for the same.
Change-Id: Idc16b7a4621e7d79a2f6796b4b03651eba505637

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -167,6 +167,9 @@ com.wavemaker.runtime.ws$RestWsdlMissingUrl=REST WSDL is missing endpoint URL.  
 com.wavemaker.runtime.ws$WadlMethodNotFound_id=4004
 com.wavemaker.runtime.ws$WadlMethodNotFound=Unable to locate method in the WADL file.
 
+com.wavemaker.runtime.ws$ProvideEitherWSDLURLOrFile_id=4005
+com.wavemaker.runtime.ws$ProvideEitherWSDLURLOrFile=Provide Either WSDL URL or WSDL File.
+
 # com.wavemaker.tools (5000-5999)
 com.wavemaker.tools$SysPropertyNotSet_id=5000
 com.wavemaker.tools$SysPropertyNotSet=The following property(ies) must be set: {0}
