Implemented Themes rest services and wrote test cases for the same.
Change-Id: I8fa706bd3204c3f47ef6eb589a81be9ab71431dc

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -334,6 +334,23 @@ com.wavemaker.tools.data$CatalogShouldBeSet=Catalog has to be set
 com.wavemaker.tools.data$CatalogDoesNotMatchDBName_id=8003
 com.wavemaker.tools.data$CatalogDoesNotMatchDBName=Mismatch between database name set on connection url "{0}" and Catalog name "{1}"
 
+com.wavemaker.tools.data$WMHomeDoesNotExist_id=8004
+com.wavemaker.tools.data$WMHomeDoesNotExist=Wavemaker home does not exist at location "{0}"
+
+com.wavemaker.tools.data$ThemeNameCouldNotBeNullOrEmpty_id=8005
+com.wavemaker.tools.data$ThemeNameCouldNotBeNullOrEmpty=Theme Name could not be null or empty "{0}"
+
+com.wavemaker.tools.data$ThemeDoesNotExist_id=8006
+com.wavemaker.tools.data$ThemeDoesNotExist=Theme does not exist at location "{0}"
+
+com.wavemaker.tools.data$ThemeAlreadyExistInProject_id=8007
+com.wavemaker.tools.data$ThemeAlreadyExistInProject=Theme "{0}" already exist in project "{1}"
+
+com.wavemaker.tools.data$ThemeAlreadyExistInStudio_id=8008
+com.wavemaker.tools.data$ThemeAlreadyExistInStudio=Theme "{0}" already exist in studio
+
+com.wavemaker.tools.data$InvalidTheme_id=8009
+com.wavemaker.tools.data$InvalidTheme=Given file is not a valid Theme
 
 # com.wavemaker.tools.deployment (9000-9500)
 com.wavemaker.tools.deployment$UnknownDeploymentTarget_id=9000
