Introduced convertToXML service.
Change-Id: Idd3bbab0d510b17b12f5c77f45a4bb9e074793df

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -271,6 +271,8 @@ com.wavemaker.tools$FileDoesNotExist=File or Directory does not exist with the n
 com.wavemaker.tools$InsufficientResourcesToCreateJarFile_id=5032
 com.wavemaker.tools$InsufficientResourcesToCreateJarFile=Insufficient resources to create jar file
 
+com.wavemaker.tools$ConversionIsNotSupported_id=5033
+com.wavemaker.tools$ConversionIsNotSupported=Conversion is not supported from "{0}" to "{1}"
 
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
