Implemented Themes active and de active concepts on project.
Change-Id: Ia382bc3495884f7b82322160bfbaff376e1dc7fc

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -337,21 +337,6 @@ com.wavemaker.tools.data$CatalogDoesNotMatchDBName=Mismatch between database nam
 com.wavemaker.tools.data$WMHomeDoesNotExist_id=8004
 com.wavemaker.tools.data$WMHomeDoesNotExist=Wavemaker home does not exist at location "{0}"
 
-com.wavemaker.tools.data$ThemeNameCouldNotBeNullOrEmpty_id=8005
-com.wavemaker.tools.data$ThemeNameCouldNotBeNullOrEmpty=Theme Name could not be null or empty "{0}"
-
-com.wavemaker.tools.data$ThemeDoesNotExist_id=8006
-com.wavemaker.tools.data$ThemeDoesNotExist=Theme does not exist at location "{0}"
-
-com.wavemaker.tools.data$ThemeAlreadyExistInProject_id=8007
-com.wavemaker.tools.data$ThemeAlreadyExistInProject=Theme "{0}" already exist in project "{1}"
-
-com.wavemaker.tools.data$ThemeAlreadyExistInStudio_id=8008
-com.wavemaker.tools.data$ThemeAlreadyExistInStudio=Theme "{0}" already exist in studio
-
-com.wavemaker.tools.data$InvalidTheme_id=8009
-com.wavemaker.tools.data$InvalidTheme=Given file is not a valid Theme
-
 # com.wavemaker.tools.deployment (9000-9500)
 com.wavemaker.tools.deployment$UnknownDeploymentTarget_id=9000
 com.wavemaker.tools.deployment$UnknownDeploymentTarget=Unknown deployment target: "{0}"
@@ -375,6 +360,23 @@ com.wavemaker.studio$ServiceUnknown=Unknown service "{0}"
 com.wavemaker.studio$UnknownStaticFileLocation_id=10002
 com.wavemaker.studio$UnknownStaticFileLocation=StaticFileController does not support files in "{0}" (full request path: "{1}")
 
+com.wavemaker.studio$ThemeNameCanNotBeNullOrEmpty_id=10003
+com.wavemaker.studio$ThemeNameCanNotBeNullOrEmpty=Theme Name can not be null or empty "{0}"
+
+com.wavemaker.studio$ThemeDoesNotExist_id=10004
+com.wavemaker.studio$ThemeDoesNotExist=Theme does not exist at location "{0}"
+
+com.wavemaker.studio$ThemeAlreadyExistInProject_id=10005
+com.wavemaker.studio$ThemeAlreadyExistInProject=Theme "{0}" already exist in project "{1}"
+
+com.wavemaker.studio$ThemeAlreadyExistInStudio_id=10006
+com.wavemaker.studio$ThemeAlreadyExistInStudio=Theme "{0}" already exist in studio
+
+com.wavemaker.studio$InvalidTheme_id=10007
+com.wavemaker.studio$InvalidTheme=Given theme file "{0}" is not a valid Theme
+
+com.wavemaker.studio$ThemeIsInactive_id=10007
+com.wavemaker.studio$ThemeIsInactive=Given theme file "{0}" is not a valid Theme
 
 # com.wavemaker.json (11000-11999)
 com.wavemaker.json$FailedParsing_id=11000
