--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -490,7 +490,7 @@ com.wavemaker.json$MessageNotReadable_id=11039
 com.wavemaker.json$MessageNotReadable=Message not readable
 
 com.wavemaker.json$UnexpectedError_id=11040
-com.wavemaker.json$UnexpectedError=Unexpected error,please check server logs for more information
+com.wavemaker.json$UnexpectedError=Unexpected error "{0}",please check server logs for more information
 
 com.wavemaker.json$onlyZipFilesAllowedForPrefabs_id=11041
 com.wavemaker.json$onlyZipFilesAllowedForPrefabs=Only .zip files are accepted as prefabs
