--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -274,6 +274,9 @@ com.wavemaker.tools$InsufficientResourcesToCreateJarFile=Insufficient resources 
 com.wavemaker.tools$ConversionIsNotSupported_id=5033
 com.wavemaker.tools$ConversionIsNotSupported=Conversion is not supported from "{0}" to "{1}"
 
+com.wavemaker.tools$PackageTypeNotSupported_id=5034
+com.wavemaker.tools$PackageTypeNotSupported=Package of this type "{0}" is not supported
+
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
 com.wavemaker.tools$InvalidServiceId=The service name "{0}" is invalid: {1}.  Please use a different service name
