fixed database error from 'json$UnexpectedError' to 'data$DBException'
Change-Id: Ib4629d9eaeea7dc9835fa6243ccccceaefdff85d

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -11,6 +11,15 @@ com.wavemaker.runtime.data$QueryDoesntTakeParams=The named query "{0}" does not 
 com.wavemaker.runtime.data$QueryRequiresParams_id=1003
 com.wavemaker.runtime.data$QueryRequiresParams=The named query "{0}" requires the following parameters: "{1}"
 
+com.wavemaker.runtime.data$DBConnectionException_id=1004
+com.wavemaker.runtime.data$DBConnectionException=Database Exception - Failed to connect to Database
+
+com.wavemaker.runtime.data$DBCommitException_id=1005
+com.wavemaker.runtime.data$DBCommitException=Database Exception - Commit failed. Check whether DB is up
+
+com.wavemaker.runtime.data$DBSQLException_id=1006
+com.wavemaker.runtime.data$DBSQLException=Database Exception - Failed in executing SQL statement
+
 
 # com.wavemaker.runtime.server (2000-2999)
 com.wavemaker.runtime.server$MethodNotFound_id=2000
