Implemented Delete page rest service and implemented test case for the same.
Change-Id: I66564697a549b39ad7d5a2711e30dcc7b76e4e3a

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -286,6 +286,15 @@ com.wavemaker.tools$ConversionIsNotSupported=Conversion is not supported from "{
 com.wavemaker.tools$PackageTypeNotSupported_id=5034
 com.wavemaker.tools$PackageTypeNotSupported=Package of this type "{0}" is not supported
 
+com.wavemaker.tools$FailedToDeleteFolder_id=5035
+com.wavemaker.tools$FailedToDeleteFolder=Failed to delete folder "{0}"
+
+com.wavemaker.tools$FailedToDeleteFile_id=5036
+com.wavemaker.tools$FailedToDeleteFile=Failed to delete file "{0}"
+
+com.wavemaker.tools$ResourceNotAllowedForDeletion_id=5037
+com.wavemaker.tools$ResourceNotAllowedForDeletion=Resource "{0}" is not allowed for deletion
+
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
 com.wavemaker.tools$InvalidServiceId=The service name "{0}" is invalid: {1}.  Please use a different service name
