Activating the container on user login and also checking for the remote-studio application to start up on login
Change-Id: I8b1438a8c3a22c17c74260a4138b0f81921c1490

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -576,6 +576,21 @@ com.wavemaker.userNotPresentInProjectForRemoval=User "{0}" is not present in pro
 com.wavemaker.cannotRemoveOwnerFromProjectUsers_id=11062
 com.wavemaker.cannotRemoveOwnerFromProjectUsers=Cannot remove owner from users for the project "{0}"
 
+com.wavemaker.saas.applicationFailedToStart_id=11063
+com.wavemaker.saas.applicationFailedToStart=Failed to Start the project "{0}"
+
+com.wavemaker.saas.failedToActivateUserContainer_id=11064
+com.wavemaker.saas.failedToActivateUserContainer=Failed to activate user container
+
+com.wavemaker.saas.failedToLogin_id=11065
+com.wavemaker.saas.failedToLogin=Failed to login
+
+com.wavemaker.fieldShouldNotBeEmpty_id=11066
+com.wavemaker.fieldShouldNotBeEmpty=Field {0} should not be empty
+
+com.wavemaker.core.failedToValidateUrl_id=11067
+com.wavemaker.core.failedToValidateUrl=Failed to validate url {0}
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
