Patch for supporting JSON & XML for rest services in design and runtime.
Change-Id: I9fa1d43b0688da19249071440f6eacba77d53516

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -179,6 +179,15 @@ com.wavemaker.runtime.ws$WadlMethodNotFound=Unable to locate method in the WADL 
 com.wavemaker.runtime.ws$ProvideEitherWSDLURLOrFile_id=4005
 com.wavemaker.runtime.ws$ProvideEitherWSDLURLOrFile=Provide Either WSDL URL or WSDL File.
 
+com.wavemaker.runtime.ws$ContentTypeIsNotSupported_id=4006
+com.wavemaker.runtime.ws$ContentTypeIsNotSupported=Content-Type {0} is not supported.
+
+com.wavemaker.runtime.ws$FailedToInvokeService_id=4007
+com.wavemaker.runtime.ws$FailedToInvokeService=Failed to invoke service with end point {0},Please check logs for detail exception.
+
+com.wavemaker.runtime.ws$FailedToParseResponse_id=4008
+com.wavemaker.runtime.ws$FailedToParseResponse=Failed to parse {0} response.
+
 # com.wavemaker.tools (5000-5999)
 com.wavemaker.tools$SysPropertyNotSet_id=5000
 com.wavemaker.tools$SysPropertyNotSet=The following property(ies) must be set: {0}
