Implemented service to get aboutWaveMaker.
Change-Id: I71c9294d38158728e46ab44c75f43df1f0bfc991

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -408,6 +408,9 @@ com.wavemaker.studio$InvalidTheme=Given theme file "{0}" is not a valid Theme
 com.wavemaker.studio$ThemeIsInactive_id=10007
 com.wavemaker.studio$ThemeIsInactive=Given theme file "{0}" is not a valid Theme
 
+com.wavemaker.studio$FailedToLoadStudioProperties_id=10008
+com.wavemaker.studio$FailedToLoadStudioProperties=Failed to load studio properties "{0}"
+
 # com.wavemaker.json (11000-11999)
 com.wavemaker.json$FailedParsing_id=11000
 com.wavemaker.json$FailedParsing=Failed parsing JSON string "{0}"
