Refactored ResourceFileService and FileService classes and fied delete web file for saas
Change-Id: I1635602ad9013354f38c5441ef8a1a547c37608c

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -603,6 +603,9 @@ com.wavemaker.fieldShouldNotBeEmpty=Field {0} should not be empty
 com.wavemaker.core.failedToValidateUrl_id=11067
 com.wavemaker.core.failedToValidateUrl=Failed to validate url {0}
 
+com.wavemaker.tools.failedToDeleteProjectFiles_id=11068
+com.wavemaker.tools.failedToDeleteProjectFiles=Failed to delete project files for the project {0}
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
