Commit towards GH issues 1003 and  739

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -20,6 +20,9 @@ com.wavemaker.runtime.data$DBCommitException=Database Exception - Commit failed.
 com.wavemaker.runtime.data$DBSQLException_id=1006
 com.wavemaker.runtime.data$DBSQLException=Database Exception - Failed in executing SQL statement
 
+com.wavemaker.runtime.data$DBInvalidDataAccessResourceUsageException_id=1007
+com.wavemaker.runtime.data$DBInvalidDataAccessResourceUsageException=Database Exception - Please Import or Export DB In case of Design Updates.
+
 
 # com.wavemaker.runtime.server (2000-2999)
 com.wavemaker.runtime.server$MethodNotFound_id=2000
