Commit towards GH issues 1030: Right now DataServiceException is an instance of WMException,But we are not handling WMException in Rest Resolver

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -21,8 +21,10 @@ com.wavemaker.runtime.data$DBSQLException_id=1006
 com.wavemaker.runtime.data$DBSQLException=Database Exception - Failed in executing SQL statement
 
 com.wavemaker.runtime.data$DBInvalidDataAccessResourceUsageException_id=1007
-com.wavemaker.runtime.data$DBInvalidDataAccessResourceUsageException=Database Exception - Please Import or Export DB In case of Design Updates.
+com.wavemaker.runtime.data$DBInvalidDataAccessResourceUsageException= DB operation failed because of the error "{0}",USAGE - Please Import or Export DB In case of Design Updates.
 
+com.wavemaker.runtime.data$DBOperationFailedException_id=1008
+com.wavemaker.runtime.data$DBOperationFailedException=DB operation failed because of the error "{0}",please check server logs for more information
 
 # com.wavemaker.runtime.server (2000-2999)
 com.wavemaker.runtime.server$MethodNotFound_id=2000
