Fixed CloudJee related error messages
Change-Id: Icccd3e6b9cef1e0eaa9a5d31512b00a43b6e001f

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -609,6 +609,12 @@ com.wavemaker.core.failedToValidateUrl=Failed to validate url {0}
 com.wavemaker.tools.failedToDeleteProjectFiles_id=11068
 com.wavemaker.tools.failedToDeleteProjectFiles=Failed to delete project files for the project {0}
 
+com.wavemaker.tools.unAuthorizedToCloudJee_id=11069
+com.wavemaker.tools.unAuthorizedToCloudJee=Unauthorized to cloudJee,{0}
+
+com.wavemaker.tools.unexpectedCloudJeeResponse_id=11070
+com.wavemaker.tools.unexpectedCloudJeeResponse=Unexpected response from CloudJee,Response Code:{0},msg:{1}
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
