Review changes related to the commit on fixing performance issues
Change-Id: Iee92b1fac32bd3f93528050e87be08c6308c36f1

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -617,6 +617,9 @@ com.wavemaker.tools.unAuthorizedToCloudJee=Unauthorized to cloudJee,{0}
 com.wavemaker.tools.unexpectedCloudJeeResponse_id=11070
 com.wavemaker.tools.unexpectedCloudJeeResponse=Unexpected response from CloudJee,Response Code:{0},msg:{1}
 
+com.wavemaker.saas.saasclientApplicationStartupTimedOut_id=11071
+com.wavemaker.saas.saasclientApplicationStartupTimedOut=SaaS Client Application failed to start
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
