add prefabs to db
Change-Id: Ifae891503fd91902b1edbd3a39a91fd3701216f6

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -620,6 +620,15 @@ com.wavemaker.tools.unexpectedCloudJeeResponse=Unexpected response from CloudJee
 com.wavemaker.saas.saasclientApplicationStartupTimedOut_id=11071
 com.wavemaker.saas.saasclientApplicationStartupTimedOut=SaaS Client Application failed to start
 
+com.wavemaker.tools.failedToCreatePrefabFiles_id=11072
+com.wavemaker.tools.failedToCreatePrefabFiles=Failed to create files for prefab {0}
+
+com.wavemaker.tools.failedToRegisterPrefabForProject_id=11073
+com.wavemaker.tools.failedToRegisterPrefabForProject=Failed to register prefab {0} for the project {1}
+
+com.wavemaker.tools.failedToDeRegisterPrefabForProject_id=11074
+com.wavemaker.tools.failedToDeRegisterPrefabForProject=Failed to de-register prefab {0} for the project {1}
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
