Fixing issue of exporting empty database. Issue#1431.
Change-Id: I0ea2d548821b81214c7c4ef31a675df012e21c87

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -309,6 +309,9 @@ com.wavemaker.tools$FailedToDeleteFile=Failed to delete file "{0}"
 com.wavemaker.tools$ResourceNotAllowedForDeletion_id=5037
 com.wavemaker.tools$ResourceNotAllowedForDeletion=Resource "{0}" is not allowed for deletion
 
+com.wavemaker.tools$CouldNotExportEmptyDatabase_id=5038
+com.wavemaker.tools$CouldNotExportEmptyDatabase=Export of empty database is not allowed.
+
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
 com.wavemaker.tools$InvalidServiceId=The service name "{0}" is invalid: {1}.  Please use a different service name
