--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -375,6 +375,9 @@ com.wavemaker.tools.data$CatalogDoesNotMatchDBName=Mismatch between database nam
 com.wavemaker.tools.data$WMHomeDoesNotExist_id=8004
 com.wavemaker.tools.data$WMHomeDoesNotExist=Wavemaker home does not exist at location "{0}"
 
+com.wavemaker.tools.data$DataModelDoesNotExist_id=8005
+com.wavemaker.tools.data$DataModelDoesNotExist=DataModel "{0}" does not exist.
+
 # com.wavemaker.tools.deployment (9000-9500)
 com.wavemaker.tools.deployment$UnknownDeploymentTarget_id=9000
 com.wavemaker.tools.deployment$UnknownDeploymentTarget=Unknown deployment target: "{0}"
