Fixing issue#752 related to importing empty database.
Change-Id: Icc0f77d97c4f3ec71ee1e4525604360d4a726f72

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -378,6 +378,9 @@ com.wavemaker.tools.data$WMHomeDoesNotExist=Wavemaker home does not exist at loc
 com.wavemaker.tools.data$DataModelDoesNotExist_id=8005
 com.wavemaker.tools.data$DataModelDoesNotExist=DataModel "{0}" does not exist.
 
+com.wavemaker.tools.data$NoTableFound_id=8006
+com.wavemaker.tools.data$NoTableFound=No matching tables found for table filter "{0}" and schema filter "{1}".
+
 # com.wavemaker.tools.deployment (9000-9500)
 com.wavemaker.tools.deployment$UnknownDeploymentTarget_id=9000
 com.wavemaker.tools.deployment$UnknownDeploymentTarget=Unknown deployment target: "{0}"
