--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -312,6 +312,9 @@ com.wavemaker.tools$ResourceNotAllowedForDeletion=Resource "{0}" is not allowed 
 com.wavemaker.tools$CouldNotExportEmptyDatabase_id=5038
 com.wavemaker.tools$CouldNotExportEmptyDatabase=Export of empty database is not allowed.
 
+com.wavemaker.tools$ProjectNameContainsSpecialCharacter_id=5039
+com.wavemaker.tools$ProjectNameContainsSpecialCharacter=Special Characters are not allowed in Project Name.
+
 # com.wavemaker.tools.service (6000-6999)
 com.wavemaker.tools$InvalidServiceId_id=6000
 com.wavemaker.tools$InvalidServiceId=The service name "{0}" is invalid: {1}.  Please use a different service name
