Fixing issue#1438 - Localizing strings and creating specialized exceptions.
Change-Id: Ic1f944005d7e271610985058231bc5cfa62df2a3

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -384,6 +384,25 @@ com.wavemaker.tools.data$DataModelDoesNotExist=DataModel "{0}" does not exist.
 com.wavemaker.tools.data$NoTableFound_id=8006
 com.wavemaker.tools.data$NoTableFound=No matching tables found for table filter "{0}" and schema filter "{1}".
 
+com.wavemaker.tools.data$DataModelNotSet_id=8007
+com.wavemaker.tools.data$DataModelNotSet=DataModel name must be set.
+
+com.wavemaker.tools.data$EntityNameNotSet_id=8008
+com.wavemaker.tools.data$EntityNameNotSet=Entity name must be set.
+
+com.wavemaker.tools.data$EntitiesNotFound_id=8009
+com.wavemaker.tools.data$EntitiesNotFound=Entity not found.
+
+com.wavemaker.tools.data$PackageNameNotSet_id=8010
+com.wavemaker.tools.data$PackageNameNotSet=Package name must be set.
+
+com.wavemaker.tools.data$InvalidPackageName_id=8011
+com.wavemaker.tools.data$InvalidPackageName=Package name is not valid: "{0}".
+
+com.wavemaker.tools.data$TypeNotCreated_id=8012
+com.wavemaker.tools.data$TypeNotCreated=Type not created.
+
+
 # com.wavemaker.tools.deployment (9000-9500)
 com.wavemaker.tools.deployment$UnknownDeploymentTarget_id=9000
 com.wavemaker.tools.deployment$UnknownDeploymentTarget=Unknown deployment target: "{0}"
