validating max applications before preparing war
Change-Id: Ifb2b024fc18b645231bd6efa4c67374a6010e06f

--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -660,6 +660,12 @@ com.wavemaker.tools.failedToRegisterPrefabForProject=Failed to register prefab {
 com.wavemaker.tools.failedToDeRegisterPrefabForProject_id=11074
 com.wavemaker.tools.failedToDeRegisterPrefabForProject=Failed to de-register prefab {0} for the project {1}
 
+com.wavemaker.tools.failedToDeployApplication_id=11075
+com.wavemaker.tools.failedToDeployApplication=Failed to deploy application {0}
+
+com.wavemaker.core.MaxApplicationsExceeded_id=11076
+com.wavemaker.core.MaxApplicationsExceeded=Maximum of (0} applications already deployed
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
