--- a/src/main/resources/wm_resource.properties
+++ b/src/main/resources/wm_resource.properties
@@ -666,6 +666,9 @@ com.wavemaker.tools.failedToDeployApplication=Failed to deploy application {0}
 com.wavemaker.core.MaxApplicationsExceeded_id=11076
 com.wavemaker.core.MaxApplicationsExceeded=Maximum of (0} applications already deployed
 
+com.wavemaker.tools.AppContainerAllocationFailed_id=11077
+com.wavemaker.tools.AppContainerAllocationFailed=App Container Allocation Failed,Reason:{0}
+
 # com.wavemaker.tools.deployment (12000-12999)
 com.wavemaker.tools.deployment$InvalidAction_id=12000
 com.wavemaker.tools.deployment$InvalidAction=invalid action "{0}"
